--- a/styles/styles.css
+++ b/styles/styles.css
@@ -416,6 +416,7 @@ p:not(p:last-of-type) {
     width: 50px;
     height: 50px;
     justify-content: center;
+    z-index: 100;
 }
 
 .form-page {
